Fixed: Dark mode (#93)

--- a/pages/base.css
+++ b/pages/base.css
@@ -13,10 +13,10 @@ a:hover {
 }
 
 .no-icon {
-    background-image: none;
+    background-image: none !important;
 }
 
-#button-copy-rule-set, #generated-rules {
+#button-copy-rule-set, textarea {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -46,6 +46,9 @@ a:hover {
 
 #generated-rules {
     display: none;
+}
+
+textarea {
     margin-top: 20px;
 }
 
@@ -222,15 +225,19 @@ a:hover {
         background-size: 10px 10px;
     }
 
-    .subtle-hint, body, h3, p {
+    .subtle-hint, body, h3, p, .option-buttons {
         color: #aeaeae !important;
     }
 
-    #button-copy-rule-set, #generated-rules {
+    .option-buttons:hover {
+        background-color: #434343;
+    }
+
+    #button-copy-rule-set, textarea,  {
         border: 1px solid #222;
     }
 
-    #generated-rules{
+    textarea {
         background-color: #434343;
         color: #aeaeae !important;
     }
@@ -247,5 +254,24 @@ a:hover {
     #button-copy-rule-set-icon {
         background: url('../../icons/copy-light.svg') no-repeat right center;
         background-size: 20px 20px;
+    }
+
+    .important, .important > p {
+        color: #555 !important;
+    }
+
+    .important > p > a {
+        color: #555;
+        background: url('../../icons/link-dark.svg') no-repeat right center;
+        background-size: 10px 10px;
+        padding-right: 13px;
+        text-decoration: underline;
+        font-weight: normal;
+    }
+
+    .important > p > a:hover {
+        color: #777;
+        text-decoration: none;
+        cursor: pointer;
     }
 }
